# fieldguide

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/fieldguide/: __init__.py  api.py  cli.py  extractors.py  hybrid.py  hybrid_cli.py  hybrid_mcp_server.py  mcp_server.py  render.py  text.py
tests/: test_fieldguide_api.py  test_fieldguide_hybrid.py  test_fieldguide_mcp.py
