[project]
name = "fieldguide"
version = "0.1.0"
description = "Agent-facing progressive corpus orientation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "en-core-web-md",
    "en-core-web-sm",
    "spacy>=3.8,<4",
]

[project.scripts]
fieldguide = "fieldguide.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
